--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -44,7 +44,7 @@
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
 				<div class="card card_full">
-					<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
+					<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />   <!--<%=require('../images/Subtract.svg')%>-->
 					<div class="card__column">
 						<span class="card__category card__category_other">другое</span>
 						<h2 class="card__title">Бэкенд-антистресс</h2>
@@ -168,14 +168,14 @@
 		<button class="gallery__item card">
 			<span class="card__category card__category_soft">софт-скил</span>
 			<h2 class="card__title">+1 час в сутках</h2>
-			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
+			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />   <!--<%=require('../images/Subtract.svg')%>-->
 			<span class="card__price">750 синапсов</span>
 		</button>
 	</template>
 
 	<template id="card-preview">
 		<div class="card card_full">
-			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
+			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />  <!--<%=require('../images/Subtract.svg')%>-->
 			<div class="card__column">
 				<span class="card__category card__category_other">другое</span>
 				<h2 class="card__title">Бэкенд-антистресс</h2>
